--- a/eBest-Rapporter/Sales_terms.rdl
+++ b/eBest-Rapporter/Sales_terms.rdl
@@ -1,74 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Report MustUnderstand="df" xmlns="http://schemas.microsoft.com/sqlserver/reporting/2016/01/reportdefinition" xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner" xmlns:df="http://schemas.microsoft.com/sqlserver/reporting/2016/01/reportdefinition/defaultfontfamily">
+<Report MustUnderstand="df" xmlns="http://schemas.microsoft.com/sqlserver/reporting/2016/01/reportdefinition" xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner" xmlns:df="http://schemas.microsoft.com/sqlserver/reporting/2016/01/reportdefinition/defaultfontfamily" xmlns:am="http://schemas.microsoft.com/sqlserver/reporting/authoringmetadata">
+  <am:AuthoringMetadata>
+    <am:CreatedBy>
+      <am:Name>SSDTRS</am:Name>
+      <am:Version>17.8.34322.80</am:Version>
+    </am:CreatedBy>
+    <am:UpdatedBy>
+      <am:Name>SSDTRS</am:Name>
+      <am:Version>17.8.34322.80</am:Version>
+    </am:UpdatedBy>
+    <am:LastModifiedTimestamp>2023-12-16T13:09:02.2943202Z</am:LastModifiedTimestamp>
+  </am:AuthoringMetadata>
   <df:DefaultFontFamily>Segoe UI</df:DefaultFontFamily>
   <AutoRefresh>0</AutoRefresh>
-  <DataSources>
-    <DataSource Name="Test_ebest">
-      <ConnectionProperties>
-        <DataProvider>SQL</DataProvider>
-        <ConnectString>Data Source=db2016.scandic.local\EBEST;Initial Catalog=Test_eBest</ConnectString>
-        <Prompt>Specify a user name and password for data source Test_ebest:</Prompt>
-      </ConnectionProperties>
-      <rd:SecurityType>DataBase</rd:SecurityType>
-      <rd:DataSourceID>eab5adf0-b8eb-4b1b-9816-9d1c85c8b503</rd:DataSourceID>
-    </DataSource>
-  </DataSources>
   <DataSets>
-    <DataSet Name="DataSet1">
-      <Query>
-        <DataSourceName>Test_ebest</DataSourceName>
-        <CommandText>SELECT
-  t_scandic_sales_terms.Id
-  ,t_scandic_sales_terms.ValidFrom
-  ,t_scandic_sales_terms.[1.ANVENDELSE]
-  ,t_scandic_sales_terms.[2.BETALINGSVILKÅR]
-  ,t_scandic_sales_terms.[3.SALGSPANT – EIENDOMSFORHOLD]
-  ,t_scandic_sales_terms.[4.LEVERINGSTID]
-  ,t_scandic_sales_terms.[5.FORSINKET LEVERING – FRITAKELSE]
-  ,t_scandic_sales_terms.[6.AVBESTILLING]
-  ,t_scandic_sales_terms.[7.ANGRERETT]
-  ,t_scandic_sales_terms.[8.ANSVARSFORHOLD]
-  ,t_scandic_sales_terms.[9.TVISTER]
-  ,t_scandic_sales_terms.[10.FREMFØRING OG TILKOBLING AV STRØM]
-  ,t_scandic_sales_terms.[11.REKLAMASJON OG MANGLER]
-  ,t_scandic_sales_terms.[12.REFERANSEBILDE]
-  ,t_scandic_sales_terms.[13.GDPR - PERSONVERN]
-  ,t_scandic_sales_terms.[14.NYHETSBREV]
-  ,t_scandic_sales_terms.[15.VIKTIG INFORMASJON OM SELGERS PRODUKTER OG MONTERINGEN]
-  ,t_scandic_sales_terms.[15.1 BRUK AV PRODUKTER]
-  ,t_scandic_sales_terms.[15.2 DUKER TIL SCREEN OG MARKISER]
-  ,t_scandic_sales_terms.[15.3 SOLSKJERMING OG GLASSKADER]
-  ,t_scandic_sales_terms.[15.4MONTERING OG LEVERING]
-FROM
-  t_scandic_sales_terms</CommandText>
-        <rd:DesignerState>
-          <QueryDefinition xmlns="http://schemas.microsoft.com/ReportingServices/QueryDefinition/Relational">
-            <SelectedColumns>
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="Id" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="ValidFrom" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="1.ANVENDELSE" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="2.BETALINGSVILKÅR" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="3.SALGSPANT – EIENDOMSFORHOLD" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="4.LEVERINGSTID" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="5.FORSINKET LEVERING – FRITAKELSE" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="6.AVBESTILLING" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="7.ANGRERETT" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="8.ANSVARSFORHOLD" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="9.TVISTER" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="10.FREMFØRING OG TILKOBLING AV STRØM" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="11.REKLAMASJON OG MANGLER" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="12.REFERANSEBILDE" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="13.GDPR - PERSONVERN" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="14.NYHETSBREV" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="15.VIKTIG INFORMASJON OM SELGERS PRODUKTER OG MONTERINGEN" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="15.1 BRUK AV PRODUKTER" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="15.2 DUKER TIL SCREEN OG MARKISER" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="15.3 SOLSKJERMING OG GLASSKADER" />
-              <ColumnExpression ColumnOwner="t_scandic_sales_terms" ColumnName="15.4MONTERING OG LEVERING" />
-            </SelectedColumns>
-          </QueryDefinition>
-        </rd:DesignerState>
-      </Query>
+    <DataSet Name="SalesTerms">
+      <SharedDataSet>
+        <SharedDataSetReference>eBest-SalesTerms</SharedDataSetReference>
+      </SharedDataSet>
       <Fields>
         <Field Name="Id">
           <DataField>Id</DataField>
@@ -78,80 +27,76 @@ FROM
           <DataField>ValidFrom</DataField>
           <rd:TypeName>System.DateTime</rd:TypeName>
         </Field>
-        <Field Name="ID1_ANVENDELSE">
-          <DataField>1.ANVENDELSE</DataField>
+        <Field Name="ID1__ANVENDELSE">
+          <DataField>ID1__ANVENDELSE</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID2_BETALINGSVILKÅR">
-          <DataField>2.BETALINGSVILKÅR</DataField>
+        <Field Name="ID2__BETALINGSVILKÅR">
+          <DataField>ID2__BETALINGSVILKÅR</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID3_SALGSPANT___EIENDOMSFORHOLD">
-          <DataField>3.SALGSPANT – EIENDOMSFORHOLD</DataField>
+        <Field Name="ID3__SALGSPANT___EIENDOMSFORHOLD">
+          <DataField>ID3__SALGSPANT___EIENDOMSFORHOLD</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID4_LEVERINGSTID">
-          <DataField>4.LEVERINGSTID</DataField>
+        <Field Name="ID4__LEVERINGSTID">
+          <DataField>ID4__LEVERINGSTID</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID5_FORSINKET_LEVERING___FRITAKELSE">
-          <DataField>5.FORSINKET LEVERING – FRITAKELSE</DataField>
+        <Field Name="ID5__FORSINKET_LEVERING___FRITAKELSE">
+          <DataField>ID5__FORSINKET_LEVERING___FRITAKELSE</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID6_AVBESTILLING">
-          <DataField>6.AVBESTILLING</DataField>
+        <Field Name="ID6__AVBESTILLING">
+          <DataField>ID6__AVBESTILLING</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID7_ANGRERETT">
-          <DataField>7.ANGRERETT</DataField>
+        <Field Name="ID7__ANGRERETT">
+          <DataField>ID7__ANGRERETT</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID8_ANSVARSFORHOLD">
-          <DataField>8.ANSVARSFORHOLD</DataField>
+        <Field Name="ID8__ANSVARSFORHOLD">
+          <DataField>ID8__ANSVARSFORHOLD</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID9_TVISTER">
-          <DataField>9.TVISTER</DataField>
+        <Field Name="ID9__TVISTER">
+          <DataField>ID9__TVISTER</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID10_FREMFØRING_OG_TILKOBLING_AV_STRØM">
-          <DataField>10.FREMFØRING OG TILKOBLING AV STRØM</DataField>
+        <Field Name="ID10__FREMFØRING_OG_TILKOBLING_AV_STRØM">
+          <DataField>ID10__FREMFØRING_OG_TILKOBLING_AV_STRØM</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID11_REKLAMASJON_OG_MANGLER">
-          <DataField>11.REKLAMASJON OG MANGLER</DataField>
+        <Field Name="ID11__REKLAMASJON_OG_MANGLER">
+          <DataField>ID11__REKLAMASJON_OG_MANGLER</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID12_REFERANSEBILDE">
-          <DataField>12.REFERANSEBILDE</DataField>
+        <Field Name="ID12__REFERANSEBILDE">
+          <DataField>ID12__REFERANSEBILDE</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID13_GDPR___PERSONVERN">
-          <DataField>13.GDPR - PERSONVERN</DataField>
+        <Field Name="ID13__GDPR___PERSONVERN">
+          <DataField>ID13__GDPR___PERSONVERN</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID14_NYHETSBREV">
-          <DataField>14.NYHETSBREV</DataField>
+        <Field Name="ID14__NYHETSBREV">
+          <DataField>ID14__NYHETSBREV</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID15_VIKTIG_INFORMASJON_OM_SELGERS_PRODUKTER_OG_MONTERINGEN">
-          <DataField>15.VIKTIG INFORMASJON OM SELGERS PRODUKTER OG MONTERINGEN</DataField>
+        <Field Name="ID15__BRUK_AV_PRODUKTER">
+          <DataField>ID15__BRUK_AV_PRODUKTER</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID15_1_BRUK_AV_PRODUKTER">
-          <DataField>15.1 BRUK AV PRODUKTER</DataField>
+        <Field Name="ID16__DUKER_TIL_SCREEN_OG_MARKISER">
+          <DataField>ID16__DUKER_TIL_SCREEN_OG_MARKISER</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID15_2_DUKER_TIL_SCREEN_OG_MARKISER">
-          <DataField>15.2 DUKER TIL SCREEN OG MARKISER</DataField>
+        <Field Name="ID17__SOLSKJERMING_OG_GLASSKADER">
+          <DataField>ID17__SOLSKJERMING_OG_GLASSKADER</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="ID15_3_SOLSKJERMING_OG_GLASSKADER">
-          <DataField>15.3 SOLSKJERMING OG GLASSKADER</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="ID15_4MONTERING_OG_LEVERING">
-          <DataField>15.4MONTERING OG LEVERING</DataField>
+        <Field Name="ID18__MONTERING_OG_LEVERING">
+          <DataField>ID18__MONTERING_OG_LEVERING</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
@@ -182,7 +127,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID1_ANVENDELSE.Value</Value>
+                    <Value>=First(Fields!ID1__ANVENDELSE.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -218,7 +163,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID2_BETALINGSVILKÅR.Value</Value>
+                    <Value>=First(Fields!ID2__BETALINGSVILKÅR.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -254,7 +199,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID3_SALGSPANT___EIENDOMSFORHOLD.Value</Value>
+                    <Value>=First(Fields!ID3__SALGSPANT___EIENDOMSFORHOLD.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -290,7 +235,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID4_LEVERINGSTID.Value</Value>
+                    <Value>=First(Fields!ID4__LEVERINGSTID.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -326,7 +271,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID5_FORSINKET_LEVERING___FRITAKELSE.Value</Value>
+                    <Value>=First(Fields!ID5__FORSINKET_LEVERING___FRITAKELSE.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -362,7 +307,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID6_AVBESTILLING.Value</Value>
+                    <Value>=First(Fields!ID6__AVBESTILLING.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -398,7 +343,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID7_ANGRERETT.Value</Value>
+                    <Value>=First(Fields!ID7__ANGRERETT.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -434,7 +379,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID8_ANSVARSFORHOLD.Value</Value>
+                    <Value>=First(Fields!ID8__ANSVARSFORHOLD.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -470,7 +415,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID9_TVISTER.Value</Value>
+                    <Value>=First(Fields!ID9__TVISTER.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -506,7 +451,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID10_FREMFØRING_OG_TILKOBLING_AV_STRØM.Value</Value>
+                    <Value>=First(Fields!ID10__FREMFØRING_OG_TILKOBLING_AV_STRØM.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -542,7 +487,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID11_REKLAMASJON_OG_MANGLER.Value</Value>
+                    <Value>=First(Fields!ID11__REKLAMASJON_OG_MANGLER.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -587,7 +532,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID12_REFERANSEBILDE.Value</Value>
+                    <Value>=First(Fields!ID12__REFERANSEBILDE.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -623,7 +568,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID13_GDPR___PERSONVERN.Value</Value>
+                    <Value>=First(Fields!ID13__GDPR___PERSONVERN.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -659,7 +604,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID14_NYHETSBREV.Value</Value>
+                    <Value>=First(Fields!ID14__NYHETSBREV.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -737,7 +682,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID15_1_BRUK_AV_PRODUKTER.Value</Value>
+                    <Value>=First(Fields!ID15__BRUK_AV_PRODUKTER.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -773,7 +718,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID15_2_DUKER_TIL_SCREEN_OG_MARKISER.Value</Value>
+                    <Value>=First(Fields!ID16__DUKER_TIL_SCREEN_OG_MARKISER.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -809,7 +754,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID15_3_SOLSKJERMING_OG_GLASSKADER.Value</Value>
+                    <Value>=First(Fields!ID17__SOLSKJERMING_OG_GLASSKADER.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
@@ -845,7 +790,7 @@ FROM
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID15_4MONTERING_OG_LEVERING.Value</Value>
+                    <Value>=First(Fields!ID18__MONTERING_OG_LEVERING.Value, "SalesTerms")</Value>
                     <Style>
                       <FontSize>6pt</FontSize>
                     </Style>
