--- a/eBest-Rapporter/Sales_terms2.rdl
+++ b/eBest-Rapporter/Sales_terms2.rdl
@@ -8,38 +8,43 @@
       <rd:SecurityType>DataBase</rd:SecurityType>
       <rd:DataSourceID>eab5adf0-b8eb-4b1b-9816-9d1c85c8b503</rd:DataSourceID>
     </DataSource>
+    <DataSource Name="Test_eBest1">
+      <ConnectionProperties>
+        <DataProvider>SQL</DataProvider>
+        <ConnectString>Data Source=db2016.scandic.local\EBEST;Initial Catalog=Test_eBest</ConnectString>
+      </ConnectionProperties>
+      <rd:SecurityType>DataBase</rd:SecurityType>
+      <rd:DataSourceID>717d86c9-bb36-4303-b495-fbc18805b87a</rd:DataSourceID>
+    </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSet1">
       <Query>
-        <DataSourceName>Test_ebest</DataSourceName>
-        <CommandText>SELECT TOP 1
-  t_scandic_sales_terms.Id
-  ,t_scandic_sales_terms.ValidFrom
-  ,t_scandic_sales_terms.[1.ANVENDELSE]
-  ,t_scandic_sales_terms.[2.BETALINGSVILKÅR]
-  ,t_scandic_sales_terms.[3.SALGSPANT – EIENDOMSFORHOLD]
-  ,t_scandic_sales_terms.[4.LEVERINGSTID]
-  ,t_scandic_sales_terms.[5.FORSINKET LEVERING – FRITAKELSE]
-  ,t_scandic_sales_terms.[6.AVBESTILLING]
-  ,t_scandic_sales_terms.[7.ANGRERETT]
-  ,t_scandic_sales_terms.[8.ANSVARSFORHOLD]
-  ,t_scandic_sales_terms.[9.TVISTER]
-  ,t_scandic_sales_terms.[10.FREMFØRING OG TILKOBLING AV STRØM]
-  ,t_scandic_sales_terms.[11.REKLAMASJON OG MANGLER]
-  ,t_scandic_sales_terms.[12.REFERANSEBILDE]
-  ,t_scandic_sales_terms.[13.GDPR - PERSONVERN]
-  ,t_scandic_sales_terms.[14.NYHETSBREV]
-  ,t_scandic_sales_terms.[15.VIKTIG INFORMASJON OM SELGERS PRODUKTER OG MONTERINGEN]
-  ,t_scandic_sales_terms.[15.1 BRUK AV PRODUKTER]
-  ,t_scandic_sales_terms.[15.2 DUKER TIL SCREEN OG MARKISER]
-  ,t_scandic_sales_terms.[15.3 SOLSKJERMING OG GLASSKADER]
-  ,t_scandic_sales_terms.[15.4MONTERING OG LEVERING]
-FROM
-  t_scandic_sales_terms
-WHERE CURRENT_TIMESTAMP &gt; ValidFrom
-ORDER BY
-ValidFrom DESC</CommandText>
+        <DataSourceName>Test_eBest1</DataSourceName>
+        <CommandText>SELECT
+	Id
+   ,ValidFrom
+   ,[1. ANVENDELSE]
+   ,[2. BETALINGSVILKÅR]
+   ,[3. SALGSPANT – EIENDOMSFORHOLD]
+   ,[4. LEVERINGSTID]
+   ,[5. FORSINKET LEVERING – FRITAKELSE]
+   ,[6. AVBESTILLING]
+   ,[7. ANGRERETT]
+   ,[8. ANSVARSFORHOLD]
+   ,[9. TVISTER]
+   ,[10. FREMFØRING OG TILKOBLING AV STRØM]
+   ,[11. REKLAMASJON OG MANGLER]
+   ,[12. REFERANSEBILDE]
+   ,[13. GDPR - PERSONVERN]
+   ,[14. NYHETSBREV]
+   ,[15. BRUK AV PRODUKTER]
+   ,[16. DUKER TIL SCREEN OG MARKISER]
+   ,[17. SOLSKJERMING OG GLASSKADER]
+   ,[18. MONTERING OG LEVERING]
+   ,ActiveSalesTerms
+FROM dbo.v_scandic_sales_terms
+WHERE ActiveSalesTerms = 1</CommandText>
         <rd:DesignerState>
           <QueryDefinition xmlns="http://schemas.microsoft.com/ReportingServices/QueryDefinition/Relational">
             <SelectedColumns>
@@ -68,6 +73,92 @@ ValidFrom DESC</CommandText>
           </QueryDefinition>
         </rd:DesignerState>
       </Query>
+      <Fields>
+        <Field Name="Id">
+          <DataField>Id</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="ValidFrom">
+          <DataField>ValidFrom</DataField>
+          <rd:TypeName>System.DateTime</rd:TypeName>
+        </Field>
+        <Field Name="ID1__ANVENDELSE">
+          <DataField>1. ANVENDELSE</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID2__BETALINGSVILKÅR">
+          <DataField>2. BETALINGSVILKÅR</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID3__SALGSPANT___EIENDOMSFORHOLD">
+          <DataField>3. SALGSPANT – EIENDOMSFORHOLD</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID4__LEVERINGSTID">
+          <DataField>4. LEVERINGSTID</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID5__FORSINKET_LEVERING___FRITAKELSE">
+          <DataField>5. FORSINKET LEVERING – FRITAKELSE</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID6__AVBESTILLING">
+          <DataField>6. AVBESTILLING</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID7__ANGRERETT">
+          <DataField>7. ANGRERETT</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID8__ANSVARSFORHOLD">
+          <DataField>8. ANSVARSFORHOLD</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID9__TVISTER">
+          <DataField>9. TVISTER</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID10__FREMFØRING_OG_TILKOBLING_AV_STRØM">
+          <DataField>10. FREMFØRING OG TILKOBLING AV STRØM</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID11__REKLAMASJON_OG_MANGLER">
+          <DataField>11. REKLAMASJON OG MANGLER</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID12__REFERANSEBILDE">
+          <DataField>12. REFERANSEBILDE</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID13__GDPR___PERSONVERN">
+          <DataField>13. GDPR - PERSONVERN</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID14__NYHETSBREV">
+          <DataField>14. NYHETSBREV</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID15__BRUK_AV_PRODUKTER">
+          <DataField>15. BRUK AV PRODUKTER</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID16__DUKER_TIL_SCREEN_OG_MARKISER">
+          <DataField>16. DUKER TIL SCREEN OG MARKISER</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID17__SOLSKJERMING_OG_GLASSKADER">
+          <DataField>17. SOLSKJERMING OG GLASSKADER</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ID18__MONTERING_OG_LEVERING">
+          <DataField>18. MONTERING OG LEVERING</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="ActiveSalesTerms">
+          <DataField>ActiveSalesTerms</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+      </Fields>
     </DataSet>
   </DataSets>
   <ReportSections>
@@ -127,7 +218,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID1_ANVENDELSE.Value</Value>
+                    <Value>=Fields!ID1__ANVENDELSE.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -163,7 +254,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID2_BETALINGSVILKÅR.Value</Value>
+                    <Value>=Fields!ID2__BETALINGSVILKÅR.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -199,7 +290,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID3_SALGSPANT___EIENDOMSFORHOLD.Value</Value>
+                    <Value>=Fields!ID3__SALGSPANT___EIENDOMSFORHOLD.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -235,7 +326,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID4_LEVERINGSTID.Value</Value>
+                    <Value>=Fields!ID4__LEVERINGSTID.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -271,7 +362,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID5_FORSINKET_LEVERING___FRITAKELSE.Value</Value>
+                    <Value>=Fields!ID5__FORSINKET_LEVERING___FRITAKELSE.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -307,7 +398,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID6_AVBESTILLING.Value</Value>
+                    <Value>=Fields!ID6__AVBESTILLING.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -343,7 +434,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID7_ANGRERETT.Value</Value>
+                    <Value>=Fields!ID7__ANGRERETT.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -379,7 +470,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID8_ANSVARSFORHOLD.Value</Value>
+                    <Value>=Fields!ID8__ANSVARSFORHOLD.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -415,7 +506,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID9_TVISTER.Value</Value>
+                    <Value>=Fields!ID9__TVISTER.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -451,7 +542,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID10_FREMFØRING_OG_TILKOBLING_AV_STRØM.Value</Value>
+                    <Value>=Fields!ID10__FREMFØRING_OG_TILKOBLING_AV_STRØM.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -487,7 +578,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID11_REKLAMASJON_OG_MANGLER.Value</Value>
+                    <Value>=Fields!ID11__REKLAMASJON_OG_MANGLER.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -523,7 +614,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID12_REFERANSEBILDE.Value</Value>
+                    <Value>=Fields!ID12__REFERANSEBILDE.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -559,7 +650,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID13_GDPR___PERSONVERN.Value</Value>
+                    <Value>=Fields!ID13__GDPR___PERSONVERN.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -595,7 +686,46 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID14_NYHETSBREV.Value</Value>
+                    <Value>=Fields!ID14__NYHETSBREV.Value</Value>
+                    <Style>
+                      <FontSize>8pt</FontSize>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value />
+                    <Style>
+                      <FontSize>8pt</FontSize>
+                      <FontWeight>Bold</FontWeight>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                </Style>
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>15. BRUK AV PRODUKTER</Value>
+                    <Style>
+                      <FontSize>8pt</FontSize>
+                      <FontWeight>Bold</FontWeight>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style>
+                  <TextAlign>Center</TextAlign>
+                </Style>
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>=Fields!ID15__BRUK_AV_PRODUKTER.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -617,7 +747,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>15. VIKTIG INFORMASJON OM SELGERS </Value>
+                    <Value>16. DUKER TIL SCREEN OG MARKISER</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                       <FontWeight>Bold</FontWeight>
@@ -631,49 +761,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>PRODUKTER OG MONTERINGEN</Value>
-                    <Style>
-                      <FontSize>8pt</FontSize>
-                      <FontWeight>Bold</FontWeight>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style>
-                  <TextAlign>Center</TextAlign>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value />
-                    <Style>
-                      <FontSize>8pt</FontSize>
-                      <FontWeight>Bold</FontWeight>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style>
-                  <TextAlign>Center</TextAlign>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>15.1 BRUK AV PRODUKTER</Value>
-                    <Style>
-                      <FontSize>8pt</FontSize>
-                      <FontWeight>Bold</FontWeight>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style>
-                  <TextAlign>Center</TextAlign>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>=Fields!ID15_1_BRUK_AV_PRODUKTER.Value</Value>
+                    <Value>=Fields!ID16__DUKER_TIL_SCREEN_OG_MARKISER.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -695,7 +783,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>15.2 DUKER TIL SCREEN OG MARKISER</Value>
+                    <Value>17. SOLSKJERMING OG GLASSKADER</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                       <FontWeight>Bold</FontWeight>
@@ -709,7 +797,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID15_2_DUKER_TIL_SCREEN_OG_MARKISER.Value</Value>
+                    <Value>=Fields!ID17__SOLSKJERMING_OG_GLASSKADER.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -731,7 +819,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>15.3 SOLSKJERMING OG GLASSKADER</Value>
+                    <Value>18. MONTERING OG LEVERING</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                       <FontWeight>Bold</FontWeight>
@@ -745,7 +833,7 @@ ValidFrom DESC</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=Fields!ID15_3_SOLSKJERMING_OG_GLASSKADER.Value</Value>
+                    <Value>=Fields!ID18__MONTERING_OG_LEVERING.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -757,31 +845,6 @@ ValidFrom DESC</CommandText>
                 <TextRuns>
                   <TextRun>
                     <Value />
-                    <Style>
-                      <FontSize>8pt</FontSize>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style />
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>15.4MONTERING OG LEVERING</Value>
-                    <Style>
-                      <FontSize>8pt</FontSize>
-                      <FontWeight>Bold</FontWeight>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style>
-                  <TextAlign>Center</TextAlign>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>=Fields!ID15_4MONTERING_OG_LEVERING.Value</Value>
                     <Style>
                       <FontSize>8pt</FontSize>
                     </Style>
@@ -791,9 +854,9 @@ ValidFrom DESC</CommandText>
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox5</rd:DefaultName>
-            <Top>0.5cm</Top>
+            <Top>0cm</Top>
             <Left>0.34862cm</Left>
-            <Height>16.08417cm</Height>
+            <Height>21.7198cm</Height>
             <Width>19.84792cm</Width>
             <Style>
               <Border>
